--- a/AndroidFinalProject/app/src/main/res/values/strings.xml
+++ b/AndroidFinalProject/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">AndroidFinalProject</string>
+    <string name="app_name">Kasuwa</string>
+    <string name="kasuwa_logo">Kasuwa logo</string>
+    <string name="publish_your_add">add</string>
+    <string name="search_button">search button</string>
 </resources>
