login system implementation

--- a/AndroidFinalProject/app/src/main/res/values/strings.xml
+++ b/AndroidFinalProject/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Kasuwa</string>
     <string name="kasuwa_logo">Kasuwa logo</string>
-    <string name="publish_your_add">add</string>
+    <string name="publish_your_add">new</string>
     <string name="search_button">search button</string>
     <string name="keyword">Keyword</string>
     <string name="search">Search</string>
@@ -12,6 +12,15 @@
     <string name="save">Save</string>
     <string name="product_image">product image</string>
     <string name="add_to_cart">Add to Cart</string>
+    <string name="email_adress">Email adress</string>
+    <string name="password">Password</string>
+    <string name="login">login</string>
+    <string name="register">Register</string>
+    <string name="full_name">Full name</string>
+    <string name="address">Address</string>
+    <string name="please_fill_the_fields_below">Please fill the fields below</string>
+    <string name="with_your_personal_information">with your personal information</string>
+    <string name="welcome">Welcome</string>
 
     <string-array name="category">
         <item>Choose a category</item>
